--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,125 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap');
+
+*{
+   margin: 0;
+   padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+   background: #fff;
+   color: #222;
+   font-family: 'Montserrat', sans-serif;
+   font-weight: 300;
 }
+
+.wrapper {
+   width: 1280px;
+   margin: 50px auto;
+}
+
+header .logo {
+   font-weight: 600;
+   font-size: 20px;
+}
+
+header ul.nav {
+   float: right;
+   list-style: none;
+}
+
+header ul.nav li {
+   display: inline;
+   margin-left: 25px;
+   cursor: pointer;
+   transition: all 0.3s ease 0s;
+}
+
+header ul.nav li:hover {
+   opacity: 0.5;
+}
+
+header .presentation {
+   margin: 50px 0;
+   background: url('./img/bg.jpeg') no-repeat;
+   width: 100%;
+   height: 450px;
+   background-size: cover;
+   background-position: center center;
+   background-blend-mode: multiply;
+   background-color: #878585;
+   position: relative;
+}
+
+header .presentation::after {
+   content: 'Parhaat tavarat kotiisi';
+   position: absolute;
+   top: 150px;
+   left: 150px;
+   width: 300px;
+   font-size: 40px;
+   font-weight: 600;
+   color: #fff;
+}
+
+main {
+   display: flex;
+   width: 100%;
+   flex-wrap: wrap;
+   justify-content: space-between;
+}
+
+main .item {
+   width: 30%;
+   margin-bottom: 50px;
+   background: #f5f5f5;
+   overflow: hidden;
+   position: relative;
+   padding-bottom: 20px;
+}
+
+main .item img {
+   width: 100%;
+   border-radius: 10px 10px 0 0 ;
+   transition: all 0.3s ease 0s;
+}
+
+main .item img:hover {
+   transform: scale(1.05)
+}
+
+main h2, main p, main b{
+   margin: 10px 20px;
+   color: #333;
+}
+
+main b {
+   color: green;
+}
+
+main .add-to-cart {
+   position: absolute;
+   right: 20px;
+   bottom: 20px;
+   background: #ca5252;
+   width: 35px;
+   height: 35px;
+   text-align: center;
+   line-height: 35px;
+   font-size: 35px;
+   font-weight: 600;
+   color: #fff;
+   border-radius: 50%;
+   cursor: pointer;
+   transition: all 0.4s ease 0s;
+}
+
+main .add-to-cart:hover {
+   transform: rotate(90deg);
+   background-color: rgb(37, 122, 37);
+}
+
+footer {
+   text-align: center;
+   margin-top: 100px;
+}
+
