Added shopping cart feature, v.2

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ body {
    margin: 50px auto;
 }
 
+header {
+   position: relative;
+}
+
 header .logo {
    font-weight: 600;
    font-size: 20px;
@@ -36,6 +40,59 @@ header ul.nav li {
 
 header ul.nav li:hover {
    opacity: 0.5;
+}
+
+header .shop-cart-button {
+   float: right;
+   cursor: pointer;
+   transition: all 0.3s ease 0s;
+}
+
+header .shop-cart-button:hover,
+header .shop-cart-button.active {
+   color: #dc3d3d;
+   transform: scale(1.5);
+}
+
+header .shop-cart {
+   position: absolute;
+   top: 30px;
+   right: 0;
+   width: 450px;
+   background: #fafafa;
+   box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.65);
+   z-index: 1000;
+
+   padding: 20px;
+   padding-bottom: 0;
+}
+
+header .shop-cart .empty h2 {
+   font-size: 20px;
+   margin-bottom: 20px;
+   text-align: center;
+}
+ 
+header .shop-cart .item {
+   width: 100%;
+   float: left;
+   margin-bottom: 20px;
+}
+
+header .shop-cart .item img {
+   width: 70px;
+   float: left;
+   margin-right: 20px;
+}
+
+header .shop-cart .item h2 {
+   font-size: 20px;
+   margin-bottom: 10px;
+}
+
+header .shop-cart .item p {
+   color: #797979;
+   font-weight: 600;
 }
 
 header .presentation {
