--- a/src/index.css
+++ b/src/index.css
@@ -156,6 +156,26 @@ header .presentation::after {
    transform: scale(1.1);
 }
 
+.full-item {
+   position: fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background: #222222a5;
+   z-index: 9999;
+   overflow: auto;
+}
+
+.full-item > div {
+   width: 600px;
+   position: relative;
+   margin: 10% auto;
+   padding: 40px 30px;
+   background: #fff;
+   border-radius: 9px;
+}
+
 main {
    display: flex;
    width: 100%;
@@ -172,26 +192,32 @@ main .item {
    padding-bottom: 20px;
 }
 
-main .item img {
+main .item img,
+.full-item img {
    width: 100%;
    border-radius: 10px 10px 0 0 ;
    transition: all 0.3s ease 0s;
+   cursor: pointer;
 }
 
-main .item img:hover {
+main .item img:hover,
+.full-item img:hover {
    transform: scale(1.05)
 }
 
-main h2, main p, main b{
+main h2, .full-item h2,
+main p, .full-item p,
+main b, .full-item b{
    margin: 10px 20px;
    color: #333;
 }
 
-main b {
+main b, .full-item b {
    color: green;
 }
 
-main .add-to-cart {
+main .add-to-cart,
+.full-item .add-to-cart {
    position: absolute;
    right: 20px;
    bottom: 20px;
@@ -208,7 +234,8 @@ main .add-to-cart {
    transition: all 0.4s ease 0s;
 }
 
-main .add-to-cart:hover {
+main .add-to-cart:hover,
+.full-item .add-to-cart:hover {
    transform: rotate(90deg);
    background-color: rgb(37, 122, 37);
 }
